--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/node": "^22.5.5",
+    "pica": "^9.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "vite-plugin-static-copy": "^1.0.6"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/chrome": "^0.0.271",
+    "@types/pica": "^9.0.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
